# mbelib-neo

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  libmbe-neo.pc.in
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: bench_convert.c  bench_synth.c  bench_unvoiced.c
cmake/: mbe-neoConfig.cmake.in
examples/: print_version.c
include/mbelib-neo/: mbelib.h
src/ambe/: ambe3600x2400.c  ambe3600x2450.c  ambe_common.c
src/core/: mbelib.c
src/ecc/: ecc.c  ecc_const.c
src/imbe/: imbe7100x4400.c  imbe7200x4400.c
src/internal/: ambe3600x2400_const.h  ambe3600x2450_const.h  ecc_const.h  imbe7200x4400_const.h  mbelib_const.h
tests/: test_api.c  test_ecc.c  test_golden_pcm.c  test_noise_determinism.c  test_params.c
tools/: bench_compare.sh  clang_tidy.sh  format.sh  gen_golden.c  install-git-hooks.sh
